config/samples/orange/rickaastley/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nifi
    dex-client: "true"
    nifi_cr: sec
    nodeId: "0"
    zookeeper-client: "true"
  name: sec-0
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: cluster
      port: 6007
      protocol: TCP
      targetPort: 6007
    - name: s2s
      port: 10000
      protocol: TCP
      targetPort: 10000
  selector:
    app: nifi
    nifi_cr: sec
    nodeId: "0"
  sessionAffinity: None
  type: ClusterIP
